--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,20 @@
 </head>
 <body>
   <header>
-    
+    <div class="top">
+      <ul>
+      <li><span>YOUR LOCATION <b>{{}}</b></span></li>
+      <li><span>FOR OWNERS</span></li>
+      <li><span>CUSTOMER SUPPORT</span></li>
+      <li><span>SEARCH</span></li>
+      </ul>
+    </div>
+    <a ui-sref="home"><img class="subaruhome"></a>
+    <div class="centermenu">
+      <div class="vehicles"><h2>VEHICLES</h2></div>
+      <div class="shopping"><h2>SHOPPING TOOLS</h2></div>
+      <div class="why"><h2>WHY SUBARU</h2></div>
+    </div>
   </header>
   <main ng-controller="mainCtrl">
 
