--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,24 @@
       <div class="items">SHOPPING TOOLS</div>
       <div class="items">WHY SUBARU</div>
     </div>
+
+    <div class="sideitems">
+      <div class="side">
+        <div class="byo"></div>
+        BUILD & PRICE
+      </div>
+    <div class="side">
+      <div class="fad"></div>
+        FIND RETAILER
+      </div>
+    </div>
   </header>
   <main ng-controller="mainCtrl">
 
       <ui-view></ui-view>
+
+
+<div class="backtotop">BACK TO TOP</div>
 
       <div class="footer">
         <div id="global_footer" class="text-left foundation-5">
@@ -92,42 +106,76 @@
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="parbase col1 footer-subnav"><h3>Explore Subaru</h3>
       <ul>
-          <li><a href="/vehicles/index.html" target="_parent" class="ui-link">Vehicles</a></li><li><a href="/shopping-tools/get-brochure.html" target="_parent" class="ui-link">View a Brochure</a></li><li><a href="/why-subaru/all-things-subaru.html" target="_parent" class="ui-link">All Things Subaru</a></li><li><a class="ui-link" href="/build-your-own.html" target="_parent">Build &amp; Price</a></li><li><a href="/shopping-tools/compare-vehicles/index.html" target="_parent" class="ui-link">Compare Vehicles</a></li><li><a href="/find-retailer/index.html" target="_parent" class="ui-link">Find a Retailer</a></li><li><a href="/vehicles/certified-pre-owned.html" target="_parent" class="ui-link">Certified Pre-Owned</a></li><li><a href="/site-map/index.html" target="_parent" class="ui-link">Site Map</a></li></ul>
+          <li><a href="/vehicles/index.html" target="_parent" class="ui-link">Vehicles</a></li>
+          <li><a href="/shopping-tools/get-brochure.html" target="_parent" class="ui-link">View a Brochure</a></li>
+          <li><a href="/why-subaru/all-things-subaru.html" target="_parent" class="ui-link">All Things Subaru</a></li>
+          <li><a class="ui-link" href="/build-your-own.html" target="_parent">Build &amp; Price</a></li>
+          <li><a href="/shopping-tools/compare-vehicles/index.html" target="_parent" class="ui-link">Compare Vehicles</a></li>
+          <li><a href="/find-retailer/index.html" target="_parent" class="ui-link">Find a Retailer</a></li>
+          <li><a href="/vehicles/certified-pre-owned.html" target="_parent" class="ui-link">Certified Pre-Owned</a></li>
+          <li><a href="/site-map/index.html" target="_parent" class="ui-link">Site Map</a></li></ul>
 
       </div>
       </div>
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="parbase col2 footer-subnav"><h3>Enthusiasts</h3>
       <ul>
-          <li><a href="/why-subaru/dear-subaru.html" target="_parent" class="ui-link">Dear Subaru</a></li><li><a href="/enthusiasts/rally.html" target="_parent" class="ui-link">Motorsports</a></li><li><a href="/why-subaru/events.html" target="_parent" class="ui-link">Events</a></li><li><a href="/pets/index.html" target="_parent" class="ui-link">Subaru Loves Pets</a></li><li><a href="/enthusiasts/gear/index.html" target="_parent" class="ui-link">Subaru Gear</a></li><li><a href="http://drive.subaru.com/" target="_blank" class="ui-link">Drive Magazine</a></li><li><a href="http://dp.subaru.com/" target="_blank" class="ui-link">Drive Performance</a></li><li><a href="https://www.badgeofownership.com/" target="_blank" class="ui-link">Badge of Ownership</a></li></ul>
+          <li><a href="/why-subaru/dear-subaru.html" target="_parent" class="ui-link">Dear Subaru</a></li>
+          <li><a href="/enthusiasts/rally.html" target="_parent" class="ui-link">Motorsports</a></li>
+          <li><a href="/why-subaru/events.html" target="_parent" class="ui-link">Events</a></li>
+          <li><a href="/pets/index.html" target="_parent" class="ui-link">Subaru Loves Pets</a></li>
+          <li><a href="/enthusiasts/gear/index.html" target="_parent" class="ui-link">Subaru Gear</a></li>
+          <li><a href="http://drive.subaru.com/" target="_blank" class="ui-link">Drive Magazine</a></li>
+          <li><a href="http://dp.subaru.com/" target="_blank" class="ui-link">Drive Performance</a></li>
+          <li><a href="https://www.badgeofownership.com/" target="_blank" class="ui-link">Badge of Ownership</a></li></ul>
 
       </div>
       </div>
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="parbase col3 footer-subnav"><h3>Company</h3>
       <ul>
-          <li><a href="/company/index.html" target="_parent" class="ui-link">About Subaru</a></li><li><a href="/company/careers/index.html" target="_parent" class="ui-link">Careers</a></li><li><a href="/why-subaru/partnerships.html" target="_parent" class="ui-link">Partnerships</a></li><li><a href="/company/news/index.html" target="_parent" class="ui-link">News</a></li><li><a href="/camden.html" target="_parent" class="ui-link">New Camden Home</a></li></ul>
+          <li><a href="/company/index.html" target="_parent" class="ui-link">About Subaru</a></li>
+          <li><a href="/company/careers/index.html" target="_parent" class="ui-link">Careers</a></li>
+          <li><a href="/why-subaru/partnerships.html" target="_parent" class="ui-link">Partnerships</a></li>
+          <li><a href="/company/news/index.html" target="_parent" class="ui-link">News</a></li>
+          <li><a href="/camden.html" target="_parent" class="ui-link">New Camden Home</a></li></ul>
 
       </div>
       </div>
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="col4 parbase footer-subnav"><h3>Responsibility</h3>
       <ul>
-          <li><a href="/csr/corporate-social-responsibility.html" target="_parent" class="ui-link">Corporate Responsibility</a></li><li><a href="/csr/philosophy.html" target="_parent" class="ui-link">Philosophy</a></li><li><a href="/csr/community.html" target="_parent" class="ui-link">Community</a></li><li><a href="/csr/diversity.html" target="_parent" class="ui-link">Diversity</a></li><li><a href="/csr/soa-foundation.html" target="_parent" class="ui-link">SOA Foundation</a></li><li><a href="/csr/environment-sustainability.html" target="_parent" class="ui-link">Environment</a></li><li><a href="/love-promise.html" target="_parent" class="ui-link">Love Promise</a></li></ul>
+          <li><a href="/csr/corporate-social-responsibility.html" target="_parent" class="ui-link">Corporate Responsibility</a></li>
+          <li><a href="/csr/philosophy.html" target="_parent" class="ui-link">Philosophy</a></li>
+          <li><a href="/csr/community.html" target="_parent" class="ui-link">Community</a></li>
+          <li><a href="/csr/diversity.html" target="_parent" class="ui-link">Diversity</a></li>
+          <li><a href="/csr/soa-foundation.html" target="_parent" class="ui-link">SOA Foundation</a></li>
+          <li><a href="/csr/environment-sustainability.html" target="_parent" class="ui-link">Environment</a></li>
+          <li><a href="/love-promise.html" target="_parent" class="ui-link">Love Promise</a></li></ul>
 
       </div>
       </div>
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="col5 parbase footer-subnav"><h3>Owners</h3>
       <ul>
-          <li><a href="http://www.mysubaru.com/" target="_blank" class="ui-link">MySubaru</a></li><li><a href="/owners/index.html" target="_parent" class="ui-link">Resource Center</a></li><li><a href="/owners/ownership-benefits.html" target="_parent" class="ui-link">Benefits of Ownership</a></li><li><a href="/service-parts-accessories/index.html" target="_parent" class="ui-link">Service, Parts &amp; Accessories</a></li><li><a href="/guaranteed-trade-in-program/index.html" target="_parent" class="ui-link">Guaranteed Trade-In Program</a></li><li><a href="/vehicle-recalls.html" target="_parent" class="ui-link">Vehicle Recalls</a></li></ul>
+          <li><a href="http://www.mysubaru.com/" target="_blank" class="ui-link">MySubaru</a></li>
+          <li><a href="/owners/index.html" target="_parent" class="ui-link">Resource Center</a></li>
+          <li><a href="/owners/ownership-benefits.html" target="_parent" class="ui-link">Benefits of Ownership</a></li>
+          <li><a href="/service-parts-accessories/index.html" target="_parent" class="ui-link">Service, Parts &amp; Accessories</a></li>
+          <li><a href="/guaranteed-trade-in-program/index.html" target="_parent" class="ui-link">Guaranteed Trade-In Program</a></li>
+          <li><a href="/vehicle-recalls.html" target="_parent" class="ui-link">Vehicle Recalls</a></li></ul>
 
       </div>
       </div>
                   <div class="medium-4 large-2 columns" data-equalizer-watch="footer-nav" style="height: 262px;">
                       <div class="col6 parbase footer-subnav"><h3>Other Sites</h3>
       <ul>
-          <li><a href="https://www.chase.com/business-banking/dealer-services/subaru-motors-finance" target="_blank" class="ui-link">Subaru Motors Finance</a></li><li><a href="http://www.subaru-global.com/home.html" target="_blank" class="ui-link">Subaru Global</a></li><li><a href="http://subarupower.com/" target="_blank" class="ui-link">Subaru Power Products</a></li><li><a href="http://techinfo.subaru.com/index.html" target="_blank" class="ui-link">STIS</a></li><li><a href="/parts-service/index.html" target="_parent" class="ui-link">Order Subaru Parts</a></li><li><a href="/fleet/index.html" target="_parent" class="ui-link">Subaru Fleet</a></li></ul>
+          <li><a href="https://www.chase.com/business-banking/dealer-services/subaru-motors-finance" target="_blank" class="ui-link">Subaru Motors Finance</a></li>
+          <li><a href="http://www.subaru-global.com/home.html" target="_blank" class="ui-link">Subaru Global</a></li>
+          <li><a href="http://subarupower.com/" target="_blank" class="ui-link">Subaru Power Products</a></li>
+          <li><a href="http://techinfo.subaru.com/index.html" target="_blank" class="ui-link">STIS</a></li>
+          <li><a href="/parts-service/index.html" target="_parent" class="ui-link">Order Subaru Parts</a></li>
+          <li><a href="/fleet/index.html" target="_parent" class="ui-link">Subaru Fleet</a></li></ul>
 
       </div>
       </div>
@@ -141,32 +189,33 @@
                   <div class="footer-nav-social-connect">
                       <h3>
                           <div class="global-text parbase global_text">Connect with Subaru</div>
-      </h3>
+                        </h3>
                   </div>
-                  <div class="footer-nav-social-links">
+                  <div class="footersociallinks">
                       <div class="parbase image global-image global_image"><div class="" style="">
           <a target="_blank" href="https://www.facebook.com/subaruofamerica" class="ui-link">
-              <img title="facebook" alt="Facebook icon" class="" src="/content/dam/subaru/global/body/author/fb.jpg">
+              <img title="facebook" alt="Facebook icon" class="social" src="./views/imgs/fb.jpg">
           </a>
           </div></div>
       <div class="parbase global_image_0 image global-image"><div class="" style="">
           <a target="_blank" href="https://twitter.com/subaru_usa" class="ui-link">
-              <img title="Twitter" alt="" class="" src="/content/dam/subaru/global/body/author/twitter.jpg">
+              <img title="Twitter" alt="" class="" src="./views/imgs/twitter.JPG">
           </a>
-          </div></div>
+          </div>
+        </div>
       <div class="parbase global_image_1 image global-image"><div class="" style="">
           <a target="_blank" href="http://www.youtube.com/user/Subaru" class="ui-link">
-              <img title="YouTube" alt="" class="" src="/content/dam/subaru/global/body/author/youtube.jpg">
+              <img title="YouTube" alt="" class="" src="../views/imgs/youtube.jpg">
           </a>
           </div></div>
       <div class="parbase global_image_2 image global-image"><div class="" style="">
           <a target="_blank" href="http://www.pinterest.com/subaru/" class="ui-link">
-              <img title="Pinterest" alt="" class="" src="/content/dam/subaru/global/body/author/pinterest.jpg">
+              <img title="Pinterest" alt="" class="" src="./views/imgs/pin.jpg">
           </a>
           </div></div>
       <div class="parbase global_image_3 image global-image"><div class="" style="">
           <a target="_blank" href="http://instagram.com/subaru_usa#" class="ui-link">
-              <img title="Instagram" alt="" class="" src="/content/dam/subaru/global/body/author/instagram.jpg">
+              <img title="Instagram" alt="" class="" src="./views/imgs/insta.jpg">
           </a>
           </div></div>
       </div>
