--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       <ui-view></ui-view>
 
 
-<div class="backtotop">BACK TO TOP</div>
+<div class="backtotop"><div class="textwrapper"><a><div class="topscroller">BACK TO TOP</div></a></div></div>
 
       <div class="footer">
         <div id="global_footer" class="text-left foundation-5">
