--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,12 @@
       <button id="vehicles" class="topbuttons" ng-click="showmenu = !showmenu">VEHICLES</button>
       <tasks ng-show="showmenu"></tasks>
       </div>
-    <div class="item"
+    <div class="item">
       <div id="tools" class="items" ng-click="">SHOPPING TOOLS</div>
       <div id="why" class="items" ng-click="">WHY SUBARU</div>
     </div>
-
+  </div>
+  
     <div class="sideitems">
 
     <a class="side">
@@ -53,7 +54,7 @@
       <ui-view></ui-view>
 
 
-<div class="backtotop"><div class="textwrapper"><a><div class="topscroller">BACK TO TOP</div></a></div></div>
+<div class="backtotop"><div class="textwrapper"><a><div class="topscroller"><img src="./assets/imgs/back-to-top.png">BACK TO TOP</div></a></div></div>
 
       <div class="footer">
         <div id="global_footer" class="text-left foundation-5">
