--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-  <div class="white">
+  <div id="white" class="white">
     <a ui-sref="home" class="subaruhome"></a>
 
     <div class="centermenu">
@@ -55,7 +55,15 @@
       <ui-view></ui-view>
 
 
-<div class="backtotop"><div class="textwrapper"><a><div class="topscroller"><img src="./assets/imgs/back-to-top.png">BACK TO TOP</div></a></div></div>
+
+<div class="backtotop" onclick="topFunction()" id="myBtn" title="Go to top">
+  <div class="textwrapper">
+    <a>
+    <div class="topscroller">
+    <img src="./assets/imgs/back-to-top.png">BACK TO TOP</div>
+    </a>
+  </div>
+</div>
 
       <div class="footer">
         <div id="global_footer" class="text-left foundation-5">
@@ -460,6 +468,23 @@
       </div>
       </div>
   </main>
+  <script>
+  window.onscroll = function() {
+    scrollFunction()
+  };
+  function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          document.getElementById("white").style.top = "0";
+      }
+      if (document.body.scrollTop < 10 || document.documentElement.scrollTop > 10) {
+          document.getElementById("white").style.top = "38";
+      }
+  }
+  function topFunction() {
+      document.body.scrollTop = 0; // For Chrome, Safari and Opera
+      document.documentElement.scrollTop = 0;
+  }
+  </script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="crossorigin="anonymous"></script>
