--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html ng-app="myApp">
 <head>
 <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title>
@@ -27,7 +27,7 @@
     <div class="centermenu">
 
             <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
-              VEHICLES
+              VEHICLES <img class="arrow">
               <tasks ng-show="showmenu"></tasks></div>
 
             <div id="tools" class="items" ng-click="">SHOPPING TOOLS</div>
