--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,17 @@
     <div class="centermenu">
 
             <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
-              VEHICLES <img class="arrow">
-              <tasks ng-show="showmenu"></tasks></div>
+              VEHICLES<img class="arrow">
+              <tasks ng-show="showmenu"></tasks>
 
-            <div id="tools" class="items" ng-click="">SHOPPING TOOLS</div>
-            <div id="why" class="items" ng-click="">WHY SUBARU</div>
+            </div>
+
+            <div id="tools" class="items" ng-click="">
+              SHOPPING TOOLS<img class="arrow">
+            </div>
+            <div id="why" class="items" ng-click="">
+              WHY SUBARU<img class="arrow">
+            </div>
 
       </div>
       <div class="sideitems">
