--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div class="centermenu">
 
             <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
-              VEHICLES<img class="arrow">
+              <h1>VEHICLES<img class="arrow"></h1>
               <tasks ng-show="showmenu"></tasks>
 
             </div>
