--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,14 @@
 
             <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
               <h1>VEHICLES<img class="arrow"></h1>
-              <tasks ng-show="showmenu"></tasks>
-
+              <tasks ng-show="showmenu">
             </div>
 
             <div id="tools" class="items" ng-click="">
-              SHOPPING TOOLS<img class="arrow">
+              <h1>SHOPPING TOOLS<img class="arrow"></h1>
             </div>
             <div id="why" class="items" ng-click="">
-              WHY SUBARU<img class="arrow">
+              <h1>WHY SUBARU<img class="arrow"></h1>
             </div>
 
       </div>
@@ -50,7 +49,7 @@
           <div class="fad"></div>
           <h4>FIND RETAILER</h4>
         </a>
-  </div>
+      </div>
 
 
     </div>
