--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html ng-app="myApp">
 <head>
-<title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title>
+<!-- <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title> -->
 <link rel="stylesheet" href="./dist/styles.css" media="screen" title="no title" charset="utf-8">
 
 </head>
