--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
 <!-- <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title> -->
 <link rel="stylesheet" href="./dist/styles.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
+<script>
+$( document ).load(function() {
+    console.log( "document loaded" );
+});
+
+$( window ).on( "load", function() {
+    console.log( "window loaded" );
+});
+</script>
+
+
 </head>
 <body ng-controller="mainCtrl">
 
