--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <!-- <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title> -->
 <link rel="stylesheet" href="./dist/styles.css" media="screen" title="no title" charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" /> -->
 <script>
 // $( document ).load(function() {
@@ -35,7 +36,7 @@
   <div id="white" class="white">
     <a ui-sref="home" class="subaruhome"></a>
 
-    <div class="centermenu">
+    <div id="centermenu" class="centermenu">
 
             <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
               <h1>VEHICLES<img class="arrow"></h1>
