--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,9 @@
       function topFunction() {
           $("html, body").animate({ scrollTop: "0" }, 1000); // For Chrome, Safari and Opera
       }
+      // $(document).click(function(){
+      //   $(".cardropdown").hide();
+      // });
       </script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
