--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,8 @@
 
       <a class="side" ui-sref="build">
           <div class="byo"></div>
-          <h4>BUILD & PRICE</h4>
+          <h4 class="bp">BUILD & PRICE</h4>
+          <h4 class="build">Build</h4>
         </a>
       <a class="side">
           <div class="fad"></div>
