--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
     <div id="centermenu" class="centermenu">
 
-            <div id="vehicles" class="items" ng-click="showmenu = !showmenu">
+            <div id="vehicles" class="items" ng-click="showmenu = !showmenu; ty = !ty">
               <h1>VEHICLES<img class="arrow"></h1>
               <tasks ng-show="showmenu">
             </div>
@@ -51,7 +51,6 @@
             <div id="why" class="items" ng-click="whysubaru = !whysubaru">
               <h1>WHY SUBARU<img class="arrow"></h1>
             </div>
-
       </div>
       <div class="sideitems">
 
