--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,12 @@
 <!Doctype html>
-<html ng-app="myApp" onload="myFunction()">
+<html ng-app="myApp" onload="boxCloser()">
 <head>
 <!-- <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title> -->
 <link rel="stylesheet" href="./dist/styles.css" media="screen" title="no title" charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" /> -->
 <script>
-// $( document ).load(function() {
-//     console.log( "document loaded" );
-// });
-//
-// $( window ).on( "load", function() {
-//     console.log( "window loaded" );
-// });
+
 </script>
 
 
@@ -38,7 +32,7 @@
 
     <div id="centermenu" class="centermenu">
 
-            <div id="vehicles" class="items" ng-click="showmenu = !showmenu; ty = !ty">
+            <div id="vehicles" class="items" ng-click="showmenu = !showmenu; boxCloser()">
               <h1>VEHICLES<img class="arrow"></h1>
               <tasks ng-show="showmenu">
             </div>
@@ -72,13 +66,8 @@
       <ui-view></ui-view>
       <script type="text/javascript">
       function topFunction() {
-          $("html, body").animate({ scrollTop: "0" }, 1000); // For Chrome, Safari and Opera
-      }
-      function boxCloser(e){
-        if(e.target.id != '#vehicledropdown'){
-           document.body.removeEventListener('click', boxCloser, false);
-           $('#vehicledropdown').hide();
-        }
+          $("html, body").animate({ scrollTop: "0" }, 1000)
+          
       }
       </script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
