--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <link rel="icon" href="../assets/imgs/subaruicon.png" type="image/png" sizes="18x18">
 <!-- <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title> -->
 <link rel="stylesheet" href="./dist/styles.css" media="screen" title="no title" charset="utf-8">
+<link rel="stylesheet" href="./styles/reset.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
@@ -65,7 +66,7 @@
       <ui-view></ui-view>
       <script type="text/javascript">
       function topFunction() {
-          $("html, body").animate({ scrollTop: "0" }, 1000)
+          $("html, body").animate({ scrollTop: "0" }, 1200)
 
       }
       </script>
