--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="./styles/reset.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/owl.carousel.min.css" media="screen" title="no title" charset="utf-8">
+<link rel="stylesheet" href="./styles/owl.theme.default.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
 
