--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
           $("html, body").animate({ scrollTop: "0" }, 1200)
 
       }
+
+      // function reload() {
+      //   location.reload()
+      // }
+
       </script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
