--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="./styles/owl.carousel.min.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="./styles/owl.theme.default.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<base href="/">
 <script>
 
 </script>
